src/styles/controls/social.scss
@use "sass:color";

.social {
  display: flex;
  flex-wrap: wrap;
}

.social__item {
  &:not(:last-child) {
    margin-right: $spacing-sm;
  }
}

.social__link {
  @include dark;
  @include transition;

  display: flex;
  align-items: center;
  justify-content: center;
  width: 48px;
  height: 48px;
  border-radius: $border-radius;
  background-color: $main-color;

  &:hover,
  &:focus {
    outline: none;
    background-color: color.adjust($main-color-hex, $lightness: 10%);
  }
}

